--- a/index.html
+++ b/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Nobab Sarkar Protfolio</title>
-      <link rel="stylesheet" href="style.css">
-</head>
-<body>
-      
+
+      <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Nobab Sarkar Protfolio</title>
+            <link rel="stylesheet" href="style.css">
+      </head>
+
+      <body>
+
+
+            <section class="top_baner">
+                  <div class="half-width">
+                        <h1>Welcome To</h1>
+                        <h1><span class="orange-color">Nobab Sarkar</span> Wrold!</h1>
+                        <h3>Build Climber and Train Stopper</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum ratione illo nam. Consequatur
+                              itaque, laborum vero, id ab veritatis, fuga neque ipsum minus quasi nemo similique odit at
+                              sapiente suscipit.</p>
+                              <a class="link_button" target="_blank"  href="">HIRE ME</a>
+
+                  </div>
+
+                  <div class="half-width">
+                        <img src="./images/my-bg.png" alt="">
+                  </div>
+            </section>
 
 
 
 
 
-</body>
+
+      </body>
+
 </html>
