add new section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
                   </div>
             </section>
 
+            <section class="dream_big_section">
+                  <div class="half-width">
+                        <img src="./images/my-bg.png" alt="">
+                  </div>
+                  <div class="half-width">
+                        <h1>Dream Big</h1>
+                        <h2>Become a Web Developer</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad earum quae, quas sequi beatae expedita corrupti repellendus quaerat eius minus? Quae iure iste ea quod. Omnis cupiditate quaerat quasi sit.</p>
+                        <a class="link_button" target="_blank" href="">DOWNLOAD RESUME</a>
+                  </div>
+            </section>
+
 
 
 
