--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <body>
 
 
-            <section class="top_baner">
+            <section class="top_baner flexible-container">
                   <div class="half-width">
                         <h1>Welcome To</h1>
                         <h1><span class="orange-color">Nobab Sarkar</span> Wrold!</h1>
@@ -20,28 +20,50 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum ratione illo nam. Consequatur
                               itaque, laborum vero, id ab veritatis, fuga neque ipsum minus quasi nemo similique odit at
                               sapiente suscipit.</p>
-                              <a class="link_button" target="_blank"  href="">HIRE ME</a>
-
+                        <a class="link_button" target="_blank" href="">HIRE ME</a>
                   </div>
-
                   <div class="half-width">
                         <img src="./images/my-bg.png" alt="">
                   </div>
             </section>
 
-            <section class="dream_big_section">
+            <section class="dream_big_section flexible-container">
                   <div class="half-width">
                         <img src="./images/my-bg.png" alt="">
                   </div>
                   <div class="half-width">
                         <h1>Dream Big</h1>
                         <h2>Become a Web Developer</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad earum quae, quas sequi beatae expedita corrupti repellendus quaerat eius minus? Quae iure iste ea quod. Omnis cupiditate quaerat quasi sit.</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad earum quae, quas sequi beatae
+                              expedita corrupti repellendus quaerat eius minus? Quae iure iste ea quod. Omnis cupiditate
+                              quaerat quasi sit.</p>
                         <a class="link_button" target="_blank" href="">DOWNLOAD RESUME</a>
                   </div>
             </section>
 
+            <section class="exprence_area ">
+                  <h1>Experiences</h1>
+                  <div class="flexible-container">
+                        <div id="full-stack-developer" class="exprence-item">
+                              <h2>Full Stack Web Developer</h2>
+                              <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
+                              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, laudantium fugit
+                                    iure quaerat quam non at maxime voluptatum obcaecati nihil deserunt. Officia, totam
+                                    iure. Voluptates quo obcaecati rerum ex magnam.</p>
+                        </div>
+                        <div id="baby-web-developer" class="exprence-item">
+                              <h2> Baby Web Developer</h2>
+                              <h3 class="orange-color">2022-2024 | Hero Learnar Developer</h3>
+                              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos qui fugiat temporibus at
+                                    magnam laudantium sequi consequatur facere molestiae laboriosam nulla quaerat,
+                                    maiores numquam aperiam quidem pariatur enim. Aut, ut.</p>
+                        </div>
+                  </div>
+            </section>
 
+            <footer>
+                  <p>&copy Peter parker 2023, a progmming initiative.</p>
+            </footer>
 
 
 
